# learn_ros2

./: .gitignore  README.md
chapter2_ws/src/demo_python_pkg/: package.xml  setup.py
chapter3_ws/src/demo_python_topic/: package.xml  setup.py
chapter3_ws/src/status_display/: CMakeLists.txt  package.xml
chapter3_ws/src/status_interfaces/: CMakeLists.txt  package.xml
chapter3_ws/src/status_publisher/: package.xml  setup.py
chapter4_ws/src/chatper4_interfaces/: CMakeLists.txt  package.xml
chapter4_ws/src/demo_python_service/: package.xml  setup.py
chapter5_ws/src/demo_python_tf/: package.xml  setup.py
chapter6_ws/src/firstbot_description/: CMakeLists.txt  package.xml
chapter6_ws/src/firstbot_description/config/: display_robot_model.rviz
chapter6_ws/src/firstbot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
chapter6_ws/src/firstbot_description/urdf/: first_robot.urdf  first_robot.xacro
chapter6_ws/src/firstbot_description/urdf/fishbot/: base.urdf.xacro  fishbot.urdf.xacro
chapter6_ws/src/firstbot_description/urdf/fishbot/actuator/: caster.urdf.xacro  wheel.urdf.xacro
chapter6_ws/src/firstbot_description/urdf/fishbot/plurgins/: gazebo_control_plurgin.xacro  gazebo_sensor_plurgin.xacro
chapter6_ws/src/firstbot_description/urdf/fishbot/sensor/: camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
chapter6_ws/src/fishbot_description/: package.xml
fishbot/: CMakeLists.txt  package.xml
fishbot/fishbot_app/: package.xml  setup.py
fishbot/patrol_robot/: package.xml  setup.py
fishbot/ws/: CMakeLists.txt  package.xml
(+69 files in other folders)
