<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>firstbot_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="quietjosen@example.com">jason</maintainer>
  <license>Apache-2.0</license>

  <depend>ros-humble-robot-state-publisher</depend>
  <depend>ros-humble-joint-state-publisher</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
